# CMAKE_TEMPLATE

./: CMakeLists.txt  README.md  makefile
Bar/: CMakeLists.txt  bar.cc
Foo/: CMakeLists.txt  foo.cc
other/: B.cc  B.hh  CMakeLists.txt
shared/: A.cc  A.hh  CMakeLists.txt
